[package]
name = "kw-hn-slack"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
http_req_wasi = { version = "0.11.1", features = ["wasmedge_rustls_api", "wasmedge_rustls"] }
dotenv = "0.15.0"
openai-flows = "0.8.4"
schedule-flows = "0.2.0"
serde = "1.0.156"
serde_derive = "1.0.156"
serde_json = "1.0.94"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt", "sync"] }
web-scraper-flows = "0.1.0"
anyhow = "1.0.71"
flowsnet-platform-sdk = "0.1.5"
slack-flows = "0.3.1"
